--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+<header>
+    <h1>Welcome To Git</h1>
+</header>
 
+<section>
+    <h3>
+    Learning check out and stuff
+    </h3>
+</section>
 </body>
 </html>
