--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     </h3>
     <h4>Adding something new</h4>
 </section>
+<aside>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A delectus deserunt ut saepe temporibus natus?</p>
+</aside>
 </body>
 </html>
